fix jumbotron padding-right on mobile

--- a/css/naacl2016.css
+++ b/css/naacl2016.css
@@ -15,11 +15,11 @@ body {
 
 /* Optimizations for mobile */
 @media screen and (max-width: 768px) {
-  .jumbotron {
+  #header {
     margin-right: 0px;
     padding-right: 0px;
   }
-  .jumbotron p {
+  #header p {
     font-size: 1.2em;
   }
   .mobile-hidden {
